--- a/app/src/main/res/layout/activity_full_image.xml
+++ b/app/src/main/res/layout/activity_full_image.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".FullImage">
     <!-- activity_full_image.xml -->
+    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:background="@color/black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:titleTextColor="@color/white"/>
+
     <ImageView
         android:id="@+id/fullImageView"
         android:layout_width="match_parent"
